Coupang 오늘의 발견 완성

--- a/stylesheets/common/base.css
+++ b/stylesheets/common/base.css
@@ -1,8 +1,18 @@
 * {
   margin: 0;
   padding: 0;
+  font-size: 100%;
 }
-
-.outline {
-  border: 1px solid black;
+.container,
+.discovery-area {
+  width: 1020px;
+  margin: 0 auto;
+}
+.discovery-area {
+  margin-bottom: 100px;
+}
+header img {
+  width: 176px;
+  height: 40px;
+  margin: 100px 0 48px;
 }
