--- a/stylesheets/pages/discovery.css
+++ b/stylesheets/pages/discovery.css
@@ -35,7 +35,7 @@
 .discovery-item {
   position: relative;
   background-color: var(--color-white);
-  margin: 5px 8px;
+  margin: 5px auto;
 }
 .discovery-item-btn {
   position: absolute;
